--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,5 +1,5 @@
 # Terraform variables
 # Only email is required - no external API keys needed!
 
-notification_email = "your-email@example.com"
+notification_email = "oguz.bassari11@gmail.com"
 aws_region         = "us-east-1"
